@@ -41,6 +41,7 @@ from pyramid.compat import (
     im_func,
     url_quote,
     WIN,
+    is_bound_method,
     )
 
 from pyramid.exceptions import (
@@ -140,18 +141,7 @@ class ViewDeriver(object):
                                 self.decorated_view(
                                     self.rendered_view(
                                         self.mapped_view(
-                                            self.text_wrapped_view(
-                                                view))))))))))
-
-    @wraps_view
-    def text_wrapped_view(self, view):
-        # if the method is an instance method, we need to wrap it in order
-        # to be able to assign a __text__ value to it later.  see #461.
-        if inspect.ismethod(view):
-            def text_wrapper(context, request):
-                return view(context, request)
-            return text_wrapper
-        return view
+                                                view)))))))))
 
     @wraps_view
     def mapped_view(self, view):
@@ -428,9 +418,16 @@ class DefaultViewMapper(object):
         elif self.attr:
             mapped_view = self.map_nonclass_attr(view)
         if inspect.isroutine(mapped_view):
-            # we potentially mutate an unwrapped view here if it's a function;
-            # we do this to avoid function call overhead of injecting another
-            # wrapper
+            # This branch will be true if the view is a function or a method.
+            # We potentially mutate an unwrapped object here if it's a
+            # function.  We do this to avoid function call overhead of
+            # injecting another wrapper.  However, we must wrap if the
+            # function is a bound method because we can't set attributes on a
+            # bound method.
+            if is_bound_method(view):
+                _mapped_view = mapped_view
+                def mapped_view(context, request):
+                    return _mapped_view(context, request)
             if self.attr is not None:
                 mapped_view.__text__ = 'attr %s of %s' % (
                     self.attr, object_description(view))
